--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 <script src="vendor/d3js/topojson.js"></script>
 <script src="vendor/angular/angular.min.js"></script>
 <script src="vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
-<script src="http://cache.amap.com/lbs/static/es5.min.js"></script>
+<!-- <script src="http://cache.amap.com/lbs/static/es5.min.js"></script>
 <script src="http://webapi.amap.com/maps?v=1.3&key=0239ebeb2108f46af8d44333ad99ebb4"></script>
-
+ -->
 
 
 <script src="script/app.js"></script>
 <script src="script/service/TransSrv.js"></script>
 <script src="script/service/MapSrv.js"></script>
+<script src="script/service/ToolSrv.js"></script>
 <script src="script/controller/mainCtrl.js"></script>
