--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
 </head>
 <body ng-app="app">
-    <nav class="my-nav border-shadow">
+    <!-- <nav class="my-nav border-shadow">
         <h3>DataVisualization</h3>
         <ul>
             <li class="item1">Intro</li>
             <li class="item2">Start</li>
         </ul>
     </nav>
-    <div ui-view></div>
+    <div ui-view></div> -->
 </body>
 </html>
 <script src="vendor/jquery/dist/jquery.min.js"></script>
