--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
 </head>
 <body ng-app="app">
-    <!-- <nav class="my-nav border-shadow">
+    <nav class="my-nav border-shadow">
         <h3>DataVisualization</h3>
         <ul>
             <li class="item1">Intro</li>
             <li class="item2">Start</li>
         </ul>
     </nav>
-    <div ui-view></div> -->
+    <div ui-view></div>
 </body>
 </html>
 <script src="vendor/jquery/dist/jquery.min.js"></script>
@@ -23,6 +23,7 @@
 <script src="vendor/d3js/topojson.js"></script>
 <script src="vendor/angular/angular.min.js"></script>
 <script src="vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script src="vendor/angular-resource/angular-resource.js"></script>
 <!-- <script src="http://cache.amap.com/lbs/static/es5.min.js"></script>
 <script src="http://webapi.amap.com/maps?v=1.3&key=0239ebeb2108f46af8d44333ad99ebb4"></script>
  -->
